# jcuda-common

./: .gitignore  JCudaCommon_CMake.txt  JCudaCommon_CMake_flags.txt  README.md  pom.xml
CMake/: FindCUDA.cmake  FindPackageHandleStandardArgs.cmake
JCudaCommonJNI/: CMakeLists.txt
JCudaCommonJNI/src/: CallbackUtils.cpp  CallbackUtils.hpp  JNIUtils.cpp  JNIUtils.hpp  Logger.cpp  Logger.hpp  PointerUtils.cpp  PointerUtils.hpp
JCudaParentPOM/: pom.xml
